[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/dice_shop/dice_shop.gd" type="Script" id=1]
[ext_resource path="res://game/assets/dice/dice_d6.png" type="Texture" id=2]

[node name="dice_shop" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="vbox_menu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 450.0
margin_bottom = 240.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/vbox_menu"]
margin_right = 450.0
margin_bottom = 13.0
text = "Upgrade Your Dice!"

[node name="dice_sprite" type="TextureRect" parent="MarginContainer/vbox_menu"]
margin_top = 17.0
margin_right = 450.0
margin_bottom = 33.0
texture = ExtResource( 2 )

[node name="button_raise_minimum" type="Button" parent="MarginContainer/vbox_menu"]
margin_top = 37.0
margin_right = 450.0
margin_bottom = 56.0
text = "Raise Minimum 10 Gold"

[node name="button_raise_maximum" type="Button" parent="MarginContainer/vbox_menu"]
margin_top = 60.0
margin_right = 450.0
margin_bottom = 79.0
text = "Raise Maximum 40 Gold"

[node name="button_give_critical" type="Button" parent="MarginContainer/vbox_menu"]
margin_top = 83.0
margin_right = 450.0
margin_bottom = 102.0
text = "Empower with Critical 100 Gold"

[node name="crit_purchased_label" type="Label" parent="MarginContainer/vbox_menu"]
visible = false
margin_top = 106.0
margin_right = 450.0
margin_bottom = 119.0
text = "Critical is Empowered!"

[node name="crit_description_label" type="Label" parent="MarginContainer/vbox_menu"]
margin_top = 106.0
margin_right = 450.0
margin_bottom = 119.0
text = "Criticals double the value rolled, and happen when the dice rolls its highest value."

[node name="button_row" type="HSplitContainer" parent="MarginContainer/vbox_menu"]
margin_top = 221.0
margin_right = 450.0
margin_bottom = 240.0
size_flags_vertical = 10

[node name="gold_label" type="Label" parent="MarginContainer/vbox_menu/button_row"]
margin_top = 3.0
margin_right = 58.0
margin_bottom = 16.0
text = "Gold: 99999"

[node name="close_button" type="Button" parent="MarginContainer/vbox_menu/button_row"]
margin_left = 411.0
margin_right = 450.0
margin_bottom = 19.0
size_flags_horizontal = 8
text = "Close"

[connection signal="pressed" from="MarginContainer/vbox_menu/button_raise_minimum" to="." method="_on_button_raise_minimum_pressed"]
[connection signal="pressed" from="MarginContainer/vbox_menu/button_raise_maximum" to="." method="_on_button_raise_maximum_pressed"]
[connection signal="pressed" from="MarginContainer/vbox_menu/button_give_critical" to="." method="_on_button_give_critical_pressed"]
[connection signal="pressed" from="MarginContainer/vbox_menu/button_row/close_button" to="." method="_on_close_button_pressed"]
